Fixed spurious whitespace for gn-comma-list (#8398)
* Fixed spurious whitespace for gn-comma-list

* fixed issue when translate occurs on label

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_result_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_result_default.less
@@ -258,14 +258,20 @@
       display: inline;
       line-break: auto;
       word-break: break-word;
+      letter-spacing: -1em;
+      * {
+        letter-spacing: normal;
+      }
       a {
         line-break: normal;
       }
       &:after {
         content: ", ";
+        letter-spacing: normal;
       }
       &:last-child:after {
         content: "";
+        letter-spacing: normal;
       }
     }
   }
